Fixed double border above mobile menu login-button.

--- a/themes/finna2/less/global/navbar-bootstrap.less
+++ b/themes/finna2/less/global/navbar-bootstrap.less
@@ -364,6 +364,7 @@
       border-bottom: none;
     }
     .navbar-nav.nav-login {
+      border-top: none;
       display: inherit;
     }
   }
